factory function for buttons and callbacks

--- a/views/appform.ejs
+++ b/views/appform.ejs
@@ -1,4 +1,7 @@
 <div id="appform">
-	 <div id="start-grabber-button"></div>
-	<div id="messages"></div>
+	<div id="permanent-form-els-container">
+	 <span class="add_feed_label">Add a new feed</span><span class="add_new_name_cont"><input type="text" name="new_grab" value="name" id="new_grab" class="new_grab_data"/><span><span class="add_new_name_cont"><input type="text" name="new_grab_url" value="url" id="new_grab_url" class="new_grab_data"/><span><span id="add_feed"></span>
+	</div>
+	<div id="boxes">
+	</div>
 </div>
