--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Passport-Local Example</title>
+	<title>Grabber Prototype</title>
 	<link rel="stylesheet" href="stylesheets/style.css" type="text/css" media="screen" title="no title" charset="utf-8">
 	<%- renderScriptsAndStylesTags(scriptsAndStyles) %>
 </head>
