--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -21,7 +21,10 @@ span#add_feed{display:inline-block;width:17px;height:17px;background:url('../js/
 span.add_new_name_cont{padding-left:6px; padding-right:10px;}
 input#new_grab, input#new_grab_url{height:12px;font-size:10px;padding:2px;}
 input#new_grab_url{width:300px;}
-.grabbers_box{width:30%;overflow:hidden;float:left;padding:5px;;margin-right:10px;background:rgb(240,240,240);box-shadow: 3px 3px 3px #888;height:auto;-moz-border-radius: 6px;border-radius: 6px;}
+.team_box{float:left;position:relative;padding:5px;width:100%;height:auto;margin:10px;clear:both;}
+.grabbers_box{width:45%;overflow:hidden;float:left;padding:5px;margin-right:10px;background:rgb(240,240,240);box-shadow: 3px 3px 3px #888;height:auto;-moz-border-radius: 6px;border-radius: 6px;}
+.feed_box{width:45%;overflow:hidden;float:left;padding:5px;margin-right:10px;background:rgb(240,240,240);box-shadow: 3px 3px 3px #888;height:auto;-moz-border-radius: 6px;border-radius: 6px;display:none;}
+.feed_box a{margin-bottom:5px;}
 h3.grabbers_box_title{font-size:14px;color:rgb(230,80,150);padding-bottom:8px;text-transform:capitalize;}
 span.grabbers_url{color:rgb(110,110,110);font-size:11px;word-wrap:break-word;}
 button.nui-btn{margin-right:10px;}
